--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
+  <meta name="description" content="Des statistiques aléatoires et manifestement fausses à propos de tout.">
+  <meta property="og:title" content="Pifomètre">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gauben.github.io/Piformetre/">
+  <meta property="og:image" content="https://gauben.github.io/Piformetre/screen.png">
   <title>Pifomètre</title>
+  <link rel="icon" type="image/png" href="icon.png">
   <style>
     html {
       height: 100%;
       width: 100%;
-      display: table
+      display: table;
     }
 
     #c {
       margin: 1em;
       color: #888;
       bottom: 0;
-      position: absolute
+      position: absolute;
     }
 
     body {
@@ -29,8 +35,24 @@
       vertical-align: middle;
       background: #FCF8EF;
       color: #333;
-      font:
-        16px Tahoma, sans-serif
+      font: 16px Tahoma, sans-serif;
+    }
+
+    strong {
+      font-size: 2em;
+      line-height: 1;
+      color: #000;
+      vertical-align: top;
+    }
+
+    p+p {
+      text-align: right;
+      font-style: italic;
+      font-family: serif;
+    }
+
+    a {
+      color: navy;
     }
 
     #box {
@@ -38,43 +60,23 @@
       padding: 2em 1em 5em;
       text-align: center;
       max-width: 400px;
-      margin: auto
+      margin: auto;
+      outline: 0;
     }
 
     #pif {
       font-size: 2em;
-      line-height: 2.2
-    }
-
-    strong {
-      font-size: 2em;
-      line-height: 1;
-      color: #000;
-      vertical-align: top
-    }
-
-    p+p {
-      text-align: right;
-      font-style: italic;
-      font-family: serif
-    }
-
-    a {
-      color: navy
-    }
-
-    * {
-      transition: all .2s
+      line-height: 2.2;
+      transition: opacity .2s;
     }
   </style>
-  <link rel="icon" type="image/png" href="icon.png">
 </head>
 
 <body>
   <div id="box" tabindex="1">
     <p id="pif">Chargement du Pifomètre</p>
     <p>Une autre
-      statistique pifométrique&nbsp;? [<span id="i"></span>]</p>
+      statistique pifométrique&nbsp;? Il en reste <span id="i"></span>.</p>
   </div>
   <p id="c">
     <a href="http://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Pastiches/Pifom%C3%A8tre">
@@ -136,12 +138,15 @@
       ["Une clé pèse environ ", quelqueuh, " grammes"]
     ];
     var _ = document, b = [], h = _.getElementById('i'), c = _.getElementById('pif'), d = _.getElementById('box');
-    function ok() {
-      b[0] || (b = a.slice()); for (var e = 0, f = b.splice(pif(0, b.length), 1)[0]
-        , g = ""; e < f.length; e++)g += "string" === typeof f[e] ? f[e] : ("<strong>" + f[e]()).replace(
-          /(\d)(\d{3})$/, "$1&nbsp;$2") + "</strong>"; c.style.opacity = 0; setTimeout(function () { c.style.opacity = 1; c.innerHTML = g; }, 200); h.innerHTML = b.length
+    function pop() {
+      b[0] || (b = a.slice());
+      for (var e = 0, f = b.splice(pif(0, b.length), 1)[0], g = ""; e < f.length; e++)
+        g += "string" === typeof f[e] ? f[e] : ("<strong>" + f[e]()).replace(/(\d)(\d{3})$/, "$1&nbsp;$2") + "</strong>";
+      c.style.opacity = 0;
+      setTimeout(function () { c.style.opacity = 1; c.innerHTML = g; }, 200);
+      h.innerHTML = b.length
     }
-    (d.onclick = d.onkeydown = ok)();
+    (d.onclick = d.onkeydown = pop)();
     function pif(a, b) { return Math.random() * (b - a) + a | 0 }
     function unpeu() { return pif(2, 13) }
     function quelqueuh() { return pif(11, 29) }
