--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
   <p id="c">
     <a href="http://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Pastiches/Pifom%C3%A8tre">
-      Plus d'infos</a> -
+      Plus d'infos</a> –
     <a href="https://twitter.com/OpifOpinion">Institut de sondage</a>
   </p>
   <script>
