--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Des statistiques aléatoires et manifestement fausses à propos de tout.">
   <meta property="og:title" content="Pifomètre">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gauben.github.io/Piformetre/">
-  <meta property="og:image" content="https://gauben.github.io/Piformetre/screen.png">
+  <meta property="og:url" content="https://gauben.github.io/Pifometre/">
+  <meta property="og:image" content="https://gauben.github.io/Pifometre/screen.png">
   <title>Pifomètre</title>
   <link rel="icon" type="image/png" href="icon.png">
   <style>
