--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div id="box" tabindex="1">
     <p id="pif">Chargement du Pifomètre</p>
     <p>Une autre
-      statistique pifométrique&nbsp;? Il en reste <span id="i"></span>.</p>
+      statistique pifométrique&nbsp;? Il en reste&nbsp;<span id="i"></span>.</p>
   </div>
   <p id="c">
     <a href="http://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Pastiches/Pifom%C3%A8tre">
