--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <body>
   <div id="box" tabindex="1">
     <p id="pif">Chargement du Pifomètre</p>
-    <p>Une autre
-      statistique pifométrique&nbsp;? Il en reste&nbsp;<span id="i"></span>.</p>
+    <p>Une&nbsp;autre
+      statistique pifométrique&nbsp;? Il&nbsp;en&nbsp;reste&nbsp;<span id="i"></span>.</p>
   </div>
   <p id="c">
     <a href="http://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Pastiches/Pifom%C3%A8tre">
